# pingora-slice

./: .dockerignore  .gitignore  BUILD_BINARY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GITHUB_README.md  GITHUB_SETUP_SUMMARY.md  Makefile  PACKAGING.md  PROXY_SERVER_GUIDE.md  QUICKSTART.md  README.md  README_zh.md  RPM_SCRIPTLET_FIX.md  SETUP_GUIDE.md  STREAMING_PROXY_EXPLANATION.md  TEST_PROXY.md  UPDATES_SUMMARY.md  docker-compose.yml  pingora_slice.yaml  pingora_slice_raw_disk_full.yaml  test_full_proxy.sh  test_raw_disk_cache.sh
docs/: API.md  BATCH_IO_IMPLEMENTATION.md  BATCH_IO_SUMMARY.md  CACHE_LOOKUP_IMPLEMENTATION.md  CACHE_PURGE_zh.md  COMPRESSION.md  COMPRESSION_IMPLEMENTATION_SUMMARY.md  CONFIGURATION.md  CRASH_RECOVERY_IMPLEMENTATION.md  DEFRAGMENTATION.md  DEFRAGMENTATION_IMPLEMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_zh.md  ENHANCED_CHECKSUM.md  ENHANCED_CHECKSUM_IMPLEMENTATION.md  ENHANCED_CHECKSUM_QUICK_START.md  FEATURE_SUMMARY.md  HTTP_PURGE_FEATURE_SUMMARY.md  HTTP_PURGE_REFERENCE.md  IO_URING_IMPLEMENTATION.md  IO_URING_QUICK_START.md  IO_URING_SUMMARY.md  IO_URING_TUNING.md  OPTIMIZATION_SUMMARY.md  O_DIRECT_IMPLEMENTATION.md  PERFORMANCE_TUNING.md  PHASE7_TASK7_SUMMARY.md  PHASE7_TASK9_PERFORMANCE_SUMMARY.md  PREFETCH_IMPLEMENTATION_SUMMARY.md  PREFETCH_OPTIMIZATION.md  PURGE_CONFIG_AND_METRICS.md  PURGE_FEATURE_SUMMARY.md  PURGE_INTEGRATION_GUIDE.md  PURGE_QUICK_REFERENCE.md  PURGE_QUICK_START.md  RAW_DISK_CACHE_DESIGN.md  RAW_DISK_CONFIGURATION.md  RAW_DISK_CONFIG_IMPLEMENTATION.md  RAW_DISK_CONFIG_QUICK_REFERENCE.md  RAW_DISK_INTEGRATION_SUMMARY.md  (+30 more)
examples/: batch_io_example.rs  benchmark.rs  cache_example.rs  compression_example.rs  config_hot_reload_example.rs  defrag_example.rs  enhanced_checksum_example.rs  full_proxy_server.rs  http_purge_server.rs  io_uring_example.rs  metadata_fetcher_example.rs  metrics_endpoint_example.rs  metrics_example.rs  performance_benchmark.rs  pingora_slice.yaml  pingora_slice_optimized.yaml  pingora_slice_raw_disk.yaml  pingora_slice_raw_disk_full.yaml  pingora_slice_streaming_file.yaml  pingora_slice_streaming_full.yaml  pingora_slice_tiered_cache.yaml  prefetch_example.rs  proxy_example.rs  raw_disk_metrics_example.rs  response_assembler_example.rs  server_example.rs  smart_gc_example.rs  streaming_proxy_example.rs  streaming_proxy_with_config.rs  subrequest_manager_example.rs  tiered_cache_purge_example.rs  ttl_example.rs  zero_copy_example.rs
monitoring/: alerts.yml  prometheus.yml
packaging/: README.md  install.sh  pingora-slice.service  pingora-slice.spec.template
scripts/: setup-github.sh  stress_test.sh  test_purge.sh
src/: cache.rs  config.rs  error.rs  health_check.rs  lib.rs  main.rs  metadata_fetcher.rs  metrics.rs  metrics_endpoint.rs  models.rs  proxy.rs  purge_handler.rs  purge_metrics.rs  request_analyzer.rs  response_assembler.rs  slice_calculator.rs  streaming_proxy.rs  subrequest_manager.rs  tiered_cache.rs
tests/: prop_206_response_format.rs  prop_4xx_error_passthrough.proptest-regressions  prop_4xx_error_passthrough.rs  prop_byte_order_preservation.rs  prop_cache_hit_correctness.rs  prop_cache_key_uniqueness.rs  prop_concurrent_limit.proptest-regressions  prop_concurrent_limit.rs  prop_config_validation.rs  prop_content_range_validation.rs  prop_failure_propagation.rs  prop_invalid_range_error.rs  prop_partial_cache_hit.rs  prop_partial_request_slicing.rs  prop_range_header_format.rs  prop_range_parsing.rs  prop_request_analysis.rs  prop_response_header_completeness.rs  prop_retry_limit.rs  test_batch_io.rs  (+28 more)
(+24 files in other folders)
