[package]
name = "pingora-slice"
version = "0.2.3"
edition = "2021"

# Define the main binary using the http_purge_server example
[[bin]]
name = "pingora-slice"
path = "examples/http_purge_server.rs"

[dependencies]
# Pingora framework
pingora = { version = "0.6", features = ["cache", "proxy"] }
pingora-core = "0.6"
pingora-proxy = "0.6"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP and networking
bytes = "1.9"
http = "1.2"
reqwest = { version = "0.12", features = ["default-tls"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
async-trait = "0.1"

# Metrics
prometheus = "0.13"

# Temporary directory for cache (used in main binary)
tempfile = "3.0"

# Raw disk cache dependencies
nix = { version = "0.27", features = ["fs"] }
bitvec = "1.0"
memmap2 = "0.9"
crc32fast = "1.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Compression libraries
zstd = "0.13"
lz4 = "1.24"

# io_uring support (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = "0.5"

[dev-dependencies]
# Property-based testing
proptest = "1.6"

# Testing utilities
tokio-test = "0.4"
wiremock = "0.5"
